# gxFin

./: .env.example  Dockerfile  README.md  RPD.md  TDD.md  docker-compose.yml  pyproject.toml
app/broker/: mock_broker.py
app/data/: base_provider.py  binance_provider.py  cache_manager.py  stock_provider.py
app/runtime/: runner.py
app/storage/: database.py
app/strategy/: backtester.py  base_strategy.py  strategy_loader.py
app/ui/: main.py
scripts/: test_data.py
strategies/: rsi_strategy.py  sma_cross.py
